--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,7 @@ main {
 	line-height: 48px;
 	position: relative;
 	z-index: 10;
+	margin-bottom: 15px;
 }
 
 
@@ -406,3 +407,4 @@ main {
 	position: absolute;
 	z-index: -1;
 }
+
